# KramWriter

./: KramWriterOS.lnk  display_client.c  display_client.h  display_server.py  example_code.py  logo.py  main.py  menu.c  menu.py  menu_test.py  nesemu1-1.2.com  new.py  open.py  test.py  tetris.py  wrtitingtest.py
Die Lib/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
Die Lib/example/: Cargo.toml
Die Lib/example/src/: main.rs
Die Lib/src/: lib.rs
KramWriterOS/: Cargo.toml  cargo.toml
KramWriterOS/scripts/: keyboard.py  keyboardpinout.py  sync_notes.py
KramWriterOS/src/: README.txt  context.rs  display.rs  main.rs
KramWriterOS/src/game/: sprites.rs  tetris.rs
KramWriterOS/src/pages/: credits.rs  editor.rs  file_browser.rs  file_browser_learn.rs  learn.rs  learn_create.rs  learn_menu.rs  menu.rs  mod.rs  name_entry.rs  name_entry_learn.rs  settings.rs  simplenote_setup.rs  startup.rs  timezone.rs  write_menu.rs  zeugtris.rs  zeugtris_highscores.rs  zeugtris_menu.rs
KramWriterOS/src/ui/: bitmap.rs  fonts.rs  mod.rs
files/: TestDeck.apkg  TestDeckSu.apkg  collection-2026-04-30@07-59-45.colpkg  testfile - Kopie (4).txt
sharp_display_example/: Cargo.toml
sharp_display_example/src/: display.rs  font_renderer.rs  main.rs
sharp_display_example/src/game/: board.rs  mod.rs  score.rs  tetris.rs  tetronimo.rs
sharp_display_example/src/pages/: file_browser.rs  logo.rs  menu.rs  mod.rs  write_menu.rs  writing.rs  writing_game.rs  writing_renderer.rs  zeugtris.rs  zeugtris_menu.rs
tetris/: display_manager.py  input_handler.py  main.py  tetris.py
