[package]
name = "kramwriter-os"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = "0.11"                # Downgrade this to match rpi_memory_display
rpi_memory_display = "0.1.2"
embedded-graphics = "0.8"
anyhow = "1.0"
ropey = "1.6"
termion = "2.0"
chrono = "0.4"
chrono-tz = "0.8"
parking_lot = "0.12"
fontdue = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22" # Simplenote auth requires base64 encoding credentials